fix text size on mobile

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -18,6 +18,7 @@
 .Raiff
     position relative
     font-size 16px
+    -webkit-text-size-adjust: 100%;
     background-color #fff
     overflow hidden
 
@@ -220,6 +221,7 @@
             color #C4C4C4
             font-family 'Credit Card', 'Roboto', sans-serif
             font-size 10px
+            line-height 1
             letter-spacing .1em
             text-align center
             text-transform uppercase
@@ -227,13 +229,6 @@
 
             & span
                 font-size 16px
-                
-            // @media $mq.iphone6
-            //     top 8px
-            //     font-size 12px
-                
-            //     & span
-            //         font-size 21px
 
             @media $mq.not_mobile
                 top 28px
